--- a/review/build.gradle
+++ b/review/build.gradle
@@ -34,6 +34,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient-android', version: '4.3.5.1'
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     compile files('libs/gson-2.3.1.jar')
 }
