--- a/review/src/main/AndroidManifest.xml
+++ b/review/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.obviz.reviews">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application android:label="@string/app_name"
                  android:icon="@drawable/favicon"
                  android:allowBackup="true">
@@ -21,5 +23,6 @@
             <meta-data android:name="android.app.searchable"
                        android:resource="@xml/searchable" />
         </activity>
+
     </application>
 </manifest>
