--- a/review/build.gradle
+++ b/review/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
-    compile files('libs/gson-2.3.1.jar')
+    compile 'com.google.code.gson:gson:2.3.1'
+    androidTestCompile 'junit:junit:4.12'
 }
