--- a/review/build.gradle
+++ b/review/build.gradle
@@ -40,6 +40,6 @@ dependencies {
     compile 'org.apache.commons:commons-io:1.3.2'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:recyclerview-v7:21.0.3'
-    compile 'com.github.amlcurran.showcaseview:library:5.0.0'
+    compile 'com.github.deano2390:MaterialShowcaseView:1.0.5@aar'
     testCompile 'junit:junit:4.12'
 }
