first version discover

--- a/review/src/main/AndroidManifest.xml
+++ b/review/src/main/AndroidManifest.xml
@@ -90,6 +90,11 @@
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
+
+        <activity
+            android:name="com.obviz.review.SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
