Fix some bugs (app logo, clears, ...)

--- a/review/src/main/AndroidManifest.xml
+++ b/review/src/main/AndroidManifest.xml
@@ -91,10 +91,14 @@
             </intent-filter>
         </receiver>
 
+
+
         <activity
-            android:name="com.obviz.review.SettingsActivity"
-            android:label="@string/title_activity_settings" >
+            android:name="com.obviz.review.DiscoverAppsActivity"
+            android:label="@string/title_activity_discover_apps" >
         </activity>
+
+
     </application>
 
 </manifest>
